Fix #70. move 'remove' sign to the left and make it always visible

--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -65,8 +65,6 @@
 }
 
 .selection-remove {
-	visibility: hidden;
-	padding-left: 5px;
 	color: #ccb;
 	text-decoration: none;
 }
